fix(getstarted): prevent overflow om mobiles - fixes #120 (#121)

--- a/src/css/binary.module.css
+++ b/src/css/binary.module.css
@@ -88,3 +88,9 @@
 .binary__download {
   justify-content: center;
 }
+
+@media (max-width: 996px) {
+  .binaries {
+    max-width: 100%;
+  }
+}
